<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:seekbar="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/category_comunication">
        <!--<ListPreference-->

            <!--android:defaultValue="1"-->
            <!--android:entries="@array/send_entries"-->
            <!--android:entryValues="@array/send_values"-->
            <!--android:key="@string/send_key"-->
            <!--android:negativeButtonText="@string/Camera_Cancel"-->
            <!--android:persistent="true"-->
            <!--android:summary=""-->
            <!--android:title="@string/send_title"-->

            <!--android:widgetLayout="@layout/custom_image" />-->

        <PreferenceScreen
            android:key="send_options"
            android:title="@string/sendoption_email"
            android:widgetLayout="@layout/custom_image"></PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_recording">
        <PreferenceScreen
            android:key="@string/rec_format_key"
            android:summary="AMR"
            android:title="@string/rec_format_title"
            android:widgetLayout="@layout/custom_image">
            <Preference
                android:defaultValue="AMR"
                android:key="@string/formats_list_key"
                android:summary="AMR"
                android:title="@string/rec_format_title" />
            <Preference
                android:defaultValue="@string/Settings_Standard"
                android:key="@string/audio_quality_key"
                android:summary="@string/Settings_Standard"
                android:title="@string/audio_quality_category" />
        </PreferenceScreen>

        <CheckBoxPreference

            android:clickable="true"
            android:contextClickable="true"
            android:defaultValue="false"
            android:key="@string/blutooth_input_key"

            android:title="@string/blutooth_input_title"
            android:widgetLayout="@layout/custom_checkbox" />

        <PreferenceScreen
            android:key="@string/mic_sens_screen_key"
            android:title="@string/mic_sens_screen_title"
            android:widgetLayout="@layout/custom_image">
            <com.olympus.dmmobile.settings.SeekBarPreference
                android:defaultValue="100"
                android:key="@string/mic_sensitivity_key"
                android:max="150"
                android:summary="@string/Settings_Low"
                seekbar:min="25"
                seekbar:unitsRight="@string/Settings_High" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="@string/vcva_screen_key"
            android:summary="@string/OFF"
            android:title="@string/vcva_screen_title"
            android:widgetLayout="@layout/custom_image">
            <CheckBoxPreference
                android:defaultValue="false"

                android:clickable="true"
                android:key="@string/vcva_key"

                android:title="@string/vcva_title"
                android:widgetLayout="@layout/custom_checkbox" />
            <PreferenceCategory
                android:key="vcva_level_category"
                android:title="@string/Settings_Vcva_Level"></PreferenceCategory>
            <com.olympus.dmmobile.settings.SeekBarPreference
                android:defaultValue="5"
                android:key="@string/vcva_seekbar_key"
                android:max="9"
                android:summary="@string/Settings_max"
                seekbar:min="0"
                seekbar:unitsRight="@string/Settings_min" />

        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"

            android:clickable="true"
            android:contextClickable="true"
            android:key="@string/push_to_talk_key"
            android:title="@string/push_to_talk_title"
            android:widgetLayout="@layout/custom_checkbox" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_workflow">
        <EditTextPreference
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ_1234567890"
            android:inputType="textCapCharacters"

            android:key="@string/author_key"
            android:background="@drawable/edit_box"
            android:maxLength="16"
            android:negativeButtonText="@string/Camera_Cancel"
            android:title="@string/author_id"
            android:widgetLayout="@layout/custom_image" />
        <Preference
            android:key="@string/worktype_list_key"
            android:title="@string/worktype_list_title"
            android:widgetLayout="@layout/custom_image" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_general">
        <ListPreference

            android:defaultValue="6"
            android:entries="@array/keep_item_enties"
            android:entryValues="@array/keep_item_values"
            android:key="@string/keep_sent_items_key"
            android:negativeButtonText="@string/Camera_Cancel"
            android:title="@string/keep_sent_items_title"
            android:widgetLayout="@layout/custom_image" />
        <ListPreference

            android:defaultValue="6"
            android:entries="@array/keep_item_enties"
            android:entryValues="@array/keep_item_values"
            android:key="@string/recycle_bin_items_key"
            android:negativeButtonText="@string/Camera_Cancel"
            android:title="@string/keep_recycle_bin_items_title"
            android:widgetLayout="@layout/custom_image" />
        <ListPreference

            android:defaultValue="2"
            android:entries="@array/on_launch_entries"
            android:entryValues="@array/on_launch_values"
            android:key="@string/onlaunch_show_key"
            android:negativeButtonText="@string/Camera_Cancel"
            android:summary="List of Recordings"
            android:title="@string/onlaunch_show_title"
            android:widgetLayout="@layout/custom_image" />
        <ListPreference
            android:entries="@array/language_enties"
            android:entryValues="@array/language_values"
            android:key="@string/language_key"
            android:negativeButtonText="@string/Camera_Cancel"
            android:summary="English"
            android:title="@string/language_title"

            android:widgetLayout="@layout/custom_image" />

        <CheckBoxPreference
            android:defaultValue="false"

            android:clickable="true"
            android:contextClickable="true"
            android:key="@string/use_flashair_key"

            android:title="@string/use_flashair_title"
            android:widgetLayout="@layout/custom_checkbox" />
    </PreferenceCategory>

    <PreferenceCategory android:title="    ">
        <Preference
            android:key="@string/terms_of_use_key"
            android:title="@string/terms_of_use_title"
            android:widgetLayout="@layout/custom_image" />
        <Preference
            android:key="@string/privacy_policy_key"
            android:title="@string/privacy_policy_title"
            android:widgetLayout="@layout/custom_image" />
        <Preference
            android:key="@string/legal_notices_key"
            android:title="@string/legal_notices_title"
            android:widgetLayout="@layout/custom_image" />
        <!--<Preference android:key="@string/about_key"
            android:title="@string/Settings_About"
            android:widgetLayout="@layout/custom_image"/>-->
    </PreferenceCategory>
    <PreferenceCategory android:title="    ">
        <Preference
            android:key="@string/about_key"
            android:title="@string/Settings_About"
            android:widgetLayout="@layout/custom_image" />
    </PreferenceCategory>
</PreferenceScreen>