<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_send_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">
    <Button
        android:id="@+id/btn_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/resend"/>
    <Button
        android:id="@+id/btn_send_dialog_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/btn_resend"/>
    <Button
        android:id="@+id/btn_send_dialog_pending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button_Pending" 
        android:layout_margin="5dp"
        android:layout_below="@+id/btn_send_dialog_send"/>
    <Button
        android:id="@+id/btn_send_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button_Cancel" 
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/btn_send_dialog_pending"/>
</RelativeLayout>