<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_send_tab_menu"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/send_tab_menu"
    android:orientation="vertical" >
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Sent Dictation"
    android:textStyle="bold"
    android:textSize="20sp"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical|center_horizontal"
    />
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:text="What do you want to do for sent dictation?"
    android:textSize="20sp"
    android:gravity="center_vertical|center_horizontal"
    />
    <Button
        android:id="@+id/btn_send_tab_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/Recording_Alerts_Review" />
     <Button
        android:id="@+id/btn_send_tab_editcopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/Recording_Alerts_Edit_Copy" />

     <Button
         android:id="@+id/btn_send_tab_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:text="@string/Recording_Alerts_Cancel" />

</LinearLayout>
</RelativeLayout>